{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 610,
  "lineage": "465135d1-6139-ccf1-682b-8ab5a6fd6c5e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/zones/us-central1-c/instanceGroups/vm-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 100,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-07-23T02:27:37.212-07:00",
            "enable_cdn": false,
            "fingerprint": "mCw02AQz3hA=",
            "generated_id": 7164927586623114342,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/healthChecks/healthcheck"
            ],
            "id": "projects/jotforminternproject/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "jotforminternproject",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.healthcheck",
            "google_compute_instance.nginx1",
            "google_compute_instance.nginx2",
            "google_compute_instance_group.web_private_group",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.app_server_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-23T02:25:34.770-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/jotforminternproject/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/networks/project-vpc-network",
            "priority": 1000,
            "project": "jotforminternproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/jotforminternproject/global/forwardingRules/global-forwarding-rule",
            "ip_address": "34.160.223.245",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global-forwarding-rule",
            "port_range": "80-80",
            "project": "jotforminternproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/forwardingRules/global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/targetHttpProxies/proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance.nginx1",
            "google_compute_instance.nginx2",
            "google_compute_instance_group.web_private_group",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.app_server_subnet",
            "google_compute_target_http_proxy.target_http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/zones/us-central1-c/disks/mysql"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/jotforminternproject/zones/us-central1-c/instances/mysql",
            "instance_id": "4538813173998895414",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "3sTQSPRBflk=",
            "name": "mysql",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.170.202.233",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/networks/project-vpc-network",
                "network_ip": "10.0.2.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/regions/us-central1/subnetworks/mysql-server-subnet",
                "subnetwork_project": "jotforminternproject"
              }
            ],
            "project": "jotforminternproject",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/zones/us-central1-c/instances/mysql",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.mysql_server_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/zones/us-central1-c/disks/nginx1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/jotforminternproject/zones/us-central1-c/instances/nginx1",
            "instance_id": "2276172003865087218",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "3sTQSPRBflk=",
            "name": "nginx1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.30.102.164",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/networks/project-vpc-network",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/regions/us-central1/subnetworks/app-server-subnet",
                "subnetwork_project": "jotforminternproject"
              }
            ],
            "project": "jotforminternproject",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/zones/us-central1-c/instances/nginx1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.app_server_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/zones/us-central1-c/disks/nginx2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/jotforminternproject/zones/us-central1-c/instances/nginx2",
            "instance_id": "5146666087081921779",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "3sTQSPRBflk=",
            "name": "nginx2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.171.242.31",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/networks/project-vpc-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/regions/us-central1/subnetworks/app-server-subnet",
                "subnetwork_project": "jotforminternproject"
              }
            ],
            "project": "jotforminternproject",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/zones/us-central1-c/instances/nginx2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.app_server_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/jotforminternproject/global/networks/project-vpc-network",
            "mtu": 0,
            "name": "project-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "jotforminternproject",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/networks/project-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app_server_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-23T02:25:34.950-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/jotforminternproject/regions/us-central1/subnetworks/app-server-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "app-server-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/networks/project-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "jotforminternproject",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/regions/us-central1/subnetworks/app-server-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mysql_server_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-23T02:25:34.785-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/jotforminternproject/regions/us-central1/subnetworks/mysql-server-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "mysql-server-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/networks/project-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "jotforminternproject",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/regions/us-central1/subnetworks/mysql-server-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-23T02:28:11.739-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/jotforminternproject/global/targetHttpProxies/proxy",
            "name": "proxy",
            "project": "jotforminternproject",
            "proxy_bind": false,
            "proxy_id": 164435879770803268,
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/targetHttpProxies/proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/urlMaps/load-balancer"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance.nginx1",
            "google_compute_instance.nginx2",
            "google_compute_instance_group.web_private_group",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.app_server_subnet",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-23T02:27:59.656-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "D-nPw36gwRg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/jotforminternproject/global/urlMaps/load-balancer",
            "map_id": 6341327462555798640,
            "name": "load-balancer",
            "path_matcher": [],
            "project": "jotforminternproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jotforminternproject/global/urlMaps/load-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance.nginx1",
            "google_compute_instance.nginx2",
            "google_compute_instance_group.web_private_group",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.app_server_subnet"
          ]
        }
      ]
    }
  ]
}